# nvpy

./: .gitignore  pyproject.toml  setup.py
benchmarks/: __init__.py  sorters.py
debug-utils/: delete-all-notes.py  get-note-from-server.py  show-all-notes.py  update-note-to-server.py  validate.py
nvpy/: bindings.py  debug.py  events.py  notes_db.py  nvpy.py  search_entry.py  sorters.py  tk.py  utils.py  view.py
tests/controller/: sorters.py  tags.py
tests/notes_db/: _mixin.py  filter.py  loader.py  note.py  save_and_sync.py  sorters.py  tags.py
tests/view/: tags.py
